src/styles/pages/cp/_material-requests.scss
@use "src/styles/abstracts" as *;

// TODO: make styles reusable (see visitors)

.p-material-requests {
	&__header {
		display: flex;
		justify-content: space-between;
		flex-direction: row;

		@media (max-width: $breakpoint-xl) {
			flex-direction: column;
		}

		&-dropdowns {
			display: flex;
			flex-direction: row;

			@media (max-width: $breakpoint-xl) {
				flex-direction: column;
			}
		}
	}

	&__content-wrapper {
		min-height: 40rem;
	}

	&__searchbar,
	&__dropdown {
		margin-right: $spacer-sm;
		margin-bottom: 0;

		@media (max-width: $breakpoint-xl) {
			margin-right: 0;
			margin-bottom: $spacer-xs;
		}

		&--open {
			box-shadow: $shadow-24-black-08;
		}

		&--disabled {
			opacity: 0.5;
			pointer-events: none;
		}

		&-no-dividers {
			.c-button {
				width: 100%;
			}

			.c-multi-select__checkbox-list-item {
				border-top: none !important;
			}
		}
	}

	&__checkbox-wrapper {
		display: flex;
		align-items: center;
		padding: 0 $spacer-md;
		background-color: $white;
		border: 1px solid $silver;
		border-radius: $border-radius;
		height: $button-height;
		cursor: pointer;

		&:hover {
			border-color: $zinc;
		}
	}

	&__archive-checkbox {
		width: 100%;

		.c-checkbox__label {
			cursor: pointer;
		}
	}

	&__table {
		overflow: auto;

		tr {
			cursor: pointer;
		}

		tr td {
			padding-top: 2rem;
			padding-bottom: 2rem;
		}

		.c-table__cell {
			text-align: left;
			word-break: break-word;
		}

		&-titel-material{
			display: flex;
			flex-direction: column;

			&__name,&__requester{
				color: $black;
				font-size: $font-size-base;
				line-height: $font-size-md;
			}

			&__provider,&__mail{
				color: $neutral;
				font-size: $font-size-sm;
				line-height: $font-size-base;
				text-align: left;
				border-radius: 0;

				> .c-button__content {
					white-space: unset;
				}
			}
		}
	}
}

